# signal-domain

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  build.rs  flake.nix
schema/: domain.schema
src/: lib.rs
src/schema/: domain.rs  mod.rs
tests/: dependency_boundary.rs  domain_contract.rs
