[package]
name         = "signal-domain"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.89"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/signal-domain"
description  = "Shared Signal domain taxonomy contract."
publish      = false
links        = "signal-domain"
build        = "build.rs"

[lib]
name = "signal_domain"
path = "src/lib.rs"

[features]
default = []
nota-text = [
    "dep:nota",
    "dep:schema-language",
]

[dependencies]
nota    = { package = "nota", git = "https://github.com/LiGoldragon/nota.git", branch = "main", optional = true }
schema-language = { git = "https://github.com/LiGoldragon/schema-language.git", branch = "main", optional = true }
rkyv    = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }

[build-dependencies]
schema-rust = { package = "schema-rust", git = "https://github.com/LiGoldragon/schema-rust.git", branch = "main" }

[dev-dependencies]
nota = { package = "nota", git = "https://github.com/LiGoldragon/nota.git", branch = "main" }
schema-language = { git = "https://github.com/LiGoldragon/schema-language.git", branch = "main" }

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
